--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
 
     <TextView
         android:id="@+id/textViewFrom"
-        android:layout_width="122"
+        android:layout_width="122dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="8dp"
@@ -79,7 +79,7 @@
 
     <TextView
         android:id="@+id/textViewTo"
-        android:layout_width="122"
+        android:layout_width="122dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
@@ -111,6 +111,7 @@
         android:text="История"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewResult"
+        android:onClick="clickHistory"/>
 
 </android.support.constraint.ConstraintLayout>
